tests/Rules/Structure/Fixtures/valid/has_role_main.html.twig
<html>
<body>
<div role="main">Content</div>
</body>
</html>
