tests/Rules/Structure/Fixtures/invalid/no_main.html.twig
<html>
<body>
<header>Navigation</header>
<div>Content without main</div>
</body>
</html>
